force-app/main/default/objects/Order_Commitment__c/Order_Commitment__c.object-meta.xml
<CustomObject>
    <label>Order Commitment</label>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Order Commitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>