force-app/main/default/objects/Order_Commitment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Commitments</relationshipLabel>
    <relationshipName>Order_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>