force-app/main/default/objects/Order_Commitment__c/fields/BDD__c.field-meta.xml
<CustomField>
    <fullName>BDD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>