force-app/main/default/objects/Order_Commitment__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Order Commitments</relationshipLabel>
    <relationshipName>Order_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>