force-app/main/default/objects/Order_Commitment__c/fields/Commited_Order__c.field-meta.xml
<CustomField>
    <fullName>Commited_Order__c</fullName>
    <formula>Quantity__c *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commited Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>