force-app/main/default/objects/Order_Commitment__c/fields/Full_Year__c.field-meta.xml
<CustomField>
    <fullName>Full_Year__c</fullName>
    <formula>IF( 
TEXT(Month__c) = &apos;Jan&apos; || TEXT(Month__c) = &apos;Feb&apos; || TEXT(Month__c) = &apos;Mar&apos;,
(VALUE(SUBSTITUTE(TEXT(Financial_Year__c), &apos;FY-&apos;, &apos;20&apos;))),
(VALUE(SUBSTITUTE(TEXT(Financial_Year__c), &apos;FY-&apos;, &apos;20&apos;)) - 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>