force-app/main/default/objects/Order_Commitment__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>TEXT(Financial_Year__c) + &apos;-&apos; + BDM__c + &apos;-&apos; + Account__c + &apos;-&apos; + Business_Unit__c + &apos;-&apos; +  Product__c + &apos;-&apos; + TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>