force-app/main/default/objects/Order_Commitment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Commitments</relationshipLabel>
    <relationshipName>Order_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>